--- a/donatello.com/works/index.html
+++ b/donatello.com/works/index.html
@@ -425,11 +425,16 @@
            <h3>システム開発、SES、ウェブサイト制作に関するご相談はこちらから</h3>
         </header>
         
-<a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名 / お名前】%0d%0a /  %0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry -toEnter"><button role="link" >SESや各種製作についてお問い合わせ</button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a> 
-        <aside class="toEntry_attention">
-           メール画面が開きます。必要事項を記入してご送信下さいませ。<br>
-           いただいた内容は厳重に管理し、3営業日以内に担当者よりご連絡いたします。
-        </aside>
+<section>
+	<div>
+		<a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名 / お名前】%0d%0a /  %0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry -toEnter"><button role="link" >SESや各種製作についてお問い合わせ</button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a>
+	</div>
+	<aside class="toEntry_attention">
+       メール画面が開きます。必要事項を記入してご送信下さいませ。<br>
+       メール画面が立ち上がらない場合は、お手数ですが<br><a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名 / お名前】%0d%0a /  %0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="textMailAddress">info@donatello.com</a>までメールで直接お問い合わせくださいませ。<br>
+       いただいた内容は厳重に管理し、3営業日以内に担当者よりご連絡いたします。
+    </aside>
+</section> 
      </div>
   </section>        
 </main>
