--- a/donatello.com/inquiry/index.html
+++ b/donatello.com/inquiry/index.html
@@ -49,7 +49,7 @@
       <link rel="shortcut icon" href="../common/img/favicon.png"> 
 </head>
 <body class="inquiry">
-   <div id="loadingAnim"><svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="90.302px" height="100px" viewBox="0 0 90.302 100" xml:space="preserve"><circle class="loadingAnim_circle" cx="0" cy="0" r="5"><animateMotion dur="2s" repeatCount="indefinite"><mpath xlink:href="#targetPath"></mpath></animateMotion></circle><path id="targetPath" class="loadingAnim_path" d="M45.151,2.91c-2.152,0-4.298,0.466-5.924,1.41L8.552,22.028c-3.258,1.881-5.925,6.499-5.925,10.261v35.423 c0,3.762,2.667,8.38,5.925,10.261l30.674,17.709c1.626,0.943, .772,1.408,5.924,1.408c2.146,0,4.293-0.465,5.924-1.408 l30.67-17.709c3.263-1.881,5.93-6.499,5.93-10.261V32.289c0-.762-2.667-8.38-5.93-10.261L51.075,4.319 C49.444,3.375,47.296,2.91,45.151,2.91L45.151,2.91z"/><text class="loadnigAnim_text" x="46.5" y="55" text-anchor="middle">LOADING..</text></svg></div>   
+   <div id="loadingAnim"><svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="90.302px" height="100px" viewBox="0 0 90.302 100" xml:space="preserve"><!--<circle class="loadingAnim_circle" cx="0" cy="0" r="5"><animateMotion dur="2s" repeatCount="indefinite"><mpath xlink:href="#targetPath"></mpath></animateMotion></circle>--><path id="targetPath" class="loadingAnim_path" d="M45.151,2.91c-2.152,0-4.298,0.466-5.924,1.41L8.552,22.028c-3.258,1.881-5.925,6.499-5.925,10.261v35.423 c0,3.762,2.667,8.38,5.925,10.261l30.674,17.709c1.626,0.943, .772,1.408,5.924,1.408c2.146,0,4.293-0.465,5.924-1.408 l30.67-17.709c3.263-1.881,5.93-6.499,5.93-10.261V32.289c0-.762-2.667-8.38-5.93-10.261L51.075,4.319 C49.444,3.375,47.296,2.91,45.151,2.91L45.151,2.91z"/><text class="loadnigAnim_text" x="46.5" y="55" text-anchor="middle">LOADING..</text></svg></div>   
    <!-- ***** header  -->
    <header class="siteHeader">
 <div class="wrap">
@@ -144,7 +144,7 @@
                         「新規ビジネスにどうしてもシステム開発が必要…でも、発注先に困っている」<br>
                         「人手が足りなくて、開発スピードが遅い」<br>
                      「業務の効率化にこんなアイデアがある！けれど、エンジニアが社内にいない…」</p>
-                     <p>このメッセージをご覧の御社のような先進的なテクノロジーや、<br>あなたのイメージする、人々を豊かにするアイディア。<br>プロジェクトが動いている、また、新しいものが産まれる現場に、よくある事態です。</p>
+                     <p>テクノロジーや、人々を豊かにするアイディア。<br>プロジェクトが動いている、また、新しいものが産まれる現場に、よくある事態です。</p>
                      <p>そんなとき、私たちが力になります。</p>
                      <p>10年以上のシステム開発経験を持つDonatelloが、<br>現場にイノベーションのキーを提供します。     
                      </p>
