--- a/donatello.com/index.html
+++ b/donatello.com/index.html
@@ -143,7 +143,7 @@
          <section class="introduction">
             <div class="wrap">
                <header class="introduction_index">
-                  <h3>"DEVELOP FOR THE FURUTE."</h3>
+                  <h3>"DEVELOP FOR THE FUTURE."</h3>
                </header>
                <p class="introduction_content" >
                   私たち、株式会社Donatelloは、<br>お客様の業務を分析し、<br class="spShow">受託システム開発・SESを通じ<br>
